src/test/ui/regions/regions-infer-bound-from-trait.nll.stderr
error[E0309]: the parameter type `A` may not live long enough
  --> $DIR/regions-infer-bound-from-trait.rs:37:5
   |
LL |     check_bound(x, a)
   |     ^^^^^^^^^^^^^^^^^ ...so that the type `A` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound...
   |
LL | fn bar1<'a,A: 'a>(x: Inv<'a>, a: A) {
   |             ++++

error[E0309]: the parameter type `A` may not live long enough
  --> $DIR/regions-infer-bound-from-trait.rs:41:5
   |
LL |     check_bound(x, a)
   |     ^^^^^^^^^^^^^^^^^ ...so that the type `A` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound...
   |
LL | fn bar2<'a,'b,A:Is<'b> + 'a>(x: Inv<'a>, y: Inv<'b>, a: A) {
   |                        ++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0309`.
